kubernetes/apps/kube-system/pod-autoscaling/app/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpa-allow-internal
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vpa
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector: {}
      ports:
        - protocol: TCP
          port: 8942  # recommender
        - protocol: TCP
          port: 8943  # admission controller
